# phi2-llm-on-MLX-vs-Pytorch-MPS

./: .gitignore  LICENSE  Makefile  README.md  phi2_mlx.py  plot_metrics.ipynb  pyproject.toml  try_phi2_mlx.ipynb  try_phi2_torch.ipynb  try_torch_basics.ipynb  try_torch_mnist_training.ipynb  utils.py
