[tool.poetry]
name = "try-phi2"
version = "0.1.0"
description = ""
authors = ["Mihas <mihasK@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.36.2"
torch = "^2.1.2"
jupyter = "^1.0.0"
einops = "^0.7.0"
accelerate = "^0.25.0"
mlx = "^0.0.5"
asitop = "^0.0.24"
pandas = "^2.1.4"
plotly = "^5.18.0"
memory-profiler = "^0.61.0"
tabulate = "^0.9.0"
objgraph = "^3.6.0"
papermill = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
